objects/color__c.object
<CustomObject>
    <fields>
        <fullName>blue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>blue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>green__c</fullName>
        <defaultValue>false</defaultValue>
        <label>green</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>red__c</fullName>
        <defaultValue>false</defaultValue>
        <label>red</label>
        <type>Checkbox</type>
    </fields>
    <label>color</label>
    <nameField>
        <label>color Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>colors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>